Fix project overlay height on mobile index page

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -146,6 +146,7 @@ a {
   max-width: 470px;
   width: 90%;
   position: relative;
+  height: 190px !important;
 }
 
 .project-images img {
