--- a/css/style-tablet.css
+++ b/css/style-tablet.css
@@ -89,6 +89,7 @@
 
   .project-images {
     margin-bottom: 35px;
+    height: 100%;
   }
 
   #footer {
